fix: draw layout bug

--- a/src/canvas/baseCanvas.less
+++ b/src/canvas/baseCanvas.less
@@ -34,7 +34,7 @@
   z-index: 1;
 }
 
-.butterfly-gird-canvas-wrapper {
+.butterfly-guide-canvas-wrapper {
   position: absolute;
   top: 0;
   left: 0;
